<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:background="@color/background"
    android:weightSum="120">

    <!-- Row 1 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20"
        android:background="@color/white">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:gravity="end"
            android:layout_span="4"
            android:textSize="@dimen/dimen_40"
            android:typeface="monospace"
            android:textColor="@color/black"/>

    </TableRow>

    <!-- Row 2 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#ECEFF1"
        android:layout_weight="20">

        <Button
            android:id="@+id/buttonClearText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/clear"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonBracket"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/bracket"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonPercentage"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/percentage"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/divide"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_span="1"
            android:typeface="monospace"/>

    </TableRow>


    <!-- Row 3 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/one"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/two"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/three"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/add"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_span="1"
            android:typeface="monospace"/>

    </TableRow>


    <!-- Row 4 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/four"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/five"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/six"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/subtract"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_span="1"
            android:typeface="monospace"/>

    </TableRow>


    <!-- Row 5 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/seven"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/eight"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/nine"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/multiply"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_span="1"
            android:typeface="monospace"/>

    </TableRow>


    <!-- Row 6 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/point"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/zero"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonMinusValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/plusminus"
            android:textSize="@dimen/dimen_35"
            android:background="@color/button"
            android:textColor="@color/black"
            android:layout_span="1"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/equals"
            android:textSize="@dimen/dimen_35"
            android:background="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:layout_span="1"
            android:typeface="monospace"/>

    </TableRow>

</TableLayout>